--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -3,22 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Northwind Web</title>
+  <title>FrontEnd</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="fonts/fonts.css">
-  <link rel="stylesheet" href="fonts/iconfont/material-icons.css">
-  <!--
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  -->
 </head>
 
 <body>
-  <app-root></app-root>
+  <div class="container">
+    <app-root></app-root>
+  </div>
 </body>
 
 </html>
